[ADD] Color constants for style. Logo. Site-header.

--- a/app/client/components/App.less
+++ b/app/client/components/App.less
@@ -2,4 +2,8 @@
   background-color: slategray;
   color: aliceblue;
   text-align: center;
+  min-width: max-content;
+  .text-logo-container {
+    margin: 0.3em;
+  }
 }
