[ADD] Navigation menu added

--- a/app/client/components/app.less
+++ b/app/client/components/app.less
@@ -1,6 +1,8 @@
+@import "app_styles/colorPaletteConstants";
+
 .site-header {
-  background-color: slategray;
-  color: aliceblue;
+  background-color: @cadet-gray;
+  color: @sky-blue;
   text-align: center;
   min-width: max-content;
   .text-logo-container {
