--- a/app/client/components/pets/petsGrid.less
+++ b/app/client/components/pets/petsGrid.less
@@ -1,5 +1,20 @@
 .petsGrid_list {
   display: grid;
+  grid-template-columns: 0.5fr 1fr 0.5fr 0.5fr 1fr;
+
+  img {
+    width: 50px;
+    height: 50px;
+  }
+  span {
+    text-align: center;
+    border-top: solid black 1px;
+    border-bottom: solid black 1px;
+    border-left: dotted black 1px;
+    border-right: dotted black 1px;
+    margin-left: -1px;
+    margin-bottom: -1px;
+  }
 }
 
 .petsGrid_cards {
