--- a/app/client/components/pets/petsGrid.less
+++ b/app/client/components/pets/petsGrid.less
@@ -22,7 +22,33 @@
   margin: auto;
 
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(10em, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(10em, 2fr));
 
   grid-gap: 20px;
+
+  ul {
+    list-style-type: none;
+    border: dotted black 1px;
+    border-radius: 10px;
+    padding: 0;
+
+  }
+
+  ul > li:not(:nth-child(-n + 3)) {
+    margin-left: 10%;
+  }
+
+  ul > li:nth-child(-n + 2) {
+    text-transform: uppercase;
+    text-align: center;
+  }
+
+  ul > li:nth-child(3) {
+    text-align: center;
+  }
+
+  img {
+    width: 75%
+  }
+
 }
