--- a/app/client/components/pets/pet.less
+++ b/app/client/components/pets/pet.less
@@ -1,12 +1,37 @@
-.pet_list {
-  display: inline-flex;
-  list-style-type: none;
-}
-
 .pet_cards {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 
+  list-style-type: none;
+  border: dotted black 1px;
+  border-radius: 10px;
+  padding: 0;
+
+  background-color: #DDCEC3;
+
+  li:not(:nth-child(-n + 3)) {
+    margin-left: 10%;
+    font-style: italic;
+  }
+
+  li:nth-child(-n + 2) {
+    text-transform: uppercase;
+    text-align: center;
+  }
+
+  li:nth-child(3) {
+    text-align: center;
+  }
+
+  img {
+    width: 75%
+  }
 }
 
 .pet_groups {
-
+  list-style: none;
+  background-color: #DDCEC3;
+  border: solid black 1px;
+  margin: 1px;
 }
