--- a/app/client/components/pets/petsGrid.less
+++ b/app/client/components/pets/petsGrid.less
@@ -18,37 +18,20 @@
 }
 
 .petsGrid_cards {
-  width: 80%;
-  margin: auto;
-
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(10em, 2fr));
+  grid-template-columns: repeat(auto-fit, minmax(15em, 2fr));
+}
 
-  grid-gap: 20px;
+.petsGrid_groups {
+  display: grid;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+  grid-auto-flow: column;
 
-  ul {
-    list-style-type: none;
-    border: dotted black 1px;
-    border-radius: 10px;
-    padding: 0;
-
-  }
-
-  ul > li:not(:nth-child(-n + 3)) {
-    margin-left: 10%;
-  }
-
-  ul > li:nth-child(-n + 2) {
-    text-transform: uppercase;
-    text-align: center;
-  }
-
-  ul > li:nth-child(3) {
-    text-align: center;
-  }
-
-  img {
-    width: 75%
+  .petsGrid_groups_group {
+    display: grid;
+    align-content: baseline;
   }
 
 }
