[UPD] Images to groups display added.

--- a/app/client/components/pets/pet.less
+++ b/app/client/components/pets/pet.less
@@ -34,4 +34,16 @@
   background-color: #DDCEC3;
   border: solid black 1px;
   margin: 1px;
+
+  ul {
+    display: inline-block;
+  }
+
+  img {
+    width: 100px;
+    height: 100px;
+    float: right;
+    margin: 1%;
+    object-fit: cover;
+  }
 }
