--- a/app/client/components/pets/petsGrid.less
+++ b/app/client/components/pets/petsGrid.less
@@ -34,4 +34,9 @@
     align-content: baseline;
   }
 
+  .petsGrid_groups_header {
+    text-align: center;
+    text-transform: uppercase;
+  }
+
 }
