[ADD] Filter to search menu added.

--- a/app/client/components/pets/petsGrid.less
+++ b/app/client/components/pets/petsGrid.less
@@ -20,6 +20,8 @@
 .petsGrid_cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(15em, 2fr));
+  max-width: 800px;
+  margin: auto;
 }
 
 .petsGrid_groups {
