--- a/app/client/components/pets/pet.less
+++ b/app/client/components/pets/pet.less
@@ -38,6 +38,7 @@
   background-color: #DDCEC3;
   border: solid black 1px;
   margin: 1px;
+  display: inline-flex;
 
   ul {
     display: inline-block;
@@ -46,8 +47,8 @@
   img {
     width: 100px;
     height: 100px;
-    float: right;
-    margin: 1%;
+    //float: right;
+    margin-left: auto;
     object-fit: cover;
   }
 }
